big data improvement

--- a/modules/client/components/LeadTracker/LeadPanel.module.css
+++ b/modules/client/components/LeadTracker/LeadPanel.module.css
@@ -154,7 +154,7 @@
   margin-bottom: 0.75rem;
 }
 
-.leadCompany {
+.leadAccount {
   font-size: 1rem;
   font-weight: 600;
   color: var(--text-primary);
